@@ -450,7 +450,7 @@
       Min (<structfield>version</structfield>, <replaceable>max version supported by embedder</replaceable>).
       The version number corresponding to the current version of the
       protocol is 0. 
-      <remark>[Should the version be defined as (Major << 16 | Minor) ?]</remark>
+      <remark>[Should the version be defined as (Major &lt;&lt; 16 | Minor) ?]</remark>
     </para>
     <para>
       The currently defined bit in the
@@ -458,7 +458,7 @@
     </para>
     <programlisting><!--
 -->/* Flags for _XEMBED_INFO */
-#define XEMBED_MAPPED                   (1 << 0)<!--
+#define XEMBED_MAPPED                   (1 &lt;&lt; 0)<!--
  --></programlisting>
     <variablelist>
       <varlistentry>
@@ -799,11 +799,11 @@
       </para>
       <programlisting><!--
 -->/* Modifiers field for XEMBED_REGISTER_ACCELERATOR */
-#define XEMBED_MODIFIER_SHIFT    (1 << 0)
-#define XEMBED_MODIFIER_CONTROL  (1 << 1)
-#define XEMBED_MODIFIER_ALT      (1 << 2)
-#define XEMBED_MODIFIER_SUPER    (1 << 3)
-#define XEMBED_MODIFIER_HYPER    (1 << 4)<!--
+#define XEMBED_MODIFIER_SHIFT    (1 &lt;&lt; 0)
+#define XEMBED_MODIFIER_CONTROL  (1 &lt;&lt; 1)
+#define XEMBED_MODIFIER_ALT      (1 &lt;&lt; 2)
+#define XEMBED_MODIFIER_SUPER    (1 &lt;&lt; 3)
+#define XEMBED_MODIFIER_HYPER    (1 &lt;&lt; 4)<!--
    --></programlisting>
       <para>
 	(Meta is intentionally left out here because if you try to separate
@@ -873,7 +873,7 @@
       </para>
       <programlisting><!--
 -->/* Flags for XEMBED_ACTIVATE_ACCELERATOR */
-#define XEMBED_ACCELERATOR_OVERLOADED (1 << 0)<!--
+#define XEMBED_ACCELERATOR_OVERLOADED (1 &lt;&lt; 0)<!--
 	-->
       </programlisting>
       <variablelist>
