@@ -1,3 +1,7 @@
+Sat Apr 20 15:46:27 2002  Owen Taylor  <otaylor@redhat.com>
+
+	* xembed-spec.xml: XML fixes.
+
 Sat Apr 20 13:00:18 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* Import into CVS.
